@@ -110,7 +110,7 @@ RNAseqdata <- function(file, check = TRUE,
   (nitems <- nrow(data))
   
   # control of the design
-  if (any(dose) < 0)
+  if (any(dose < 0))
     stop("DRomics cannot be used with negative values of doses.")
   design <- table(dose, dnn = "")
   if (length(design) < 4)
