@@ -14,13 +14,13 @@ if (visualize)
   Scenedesmus_metab2[1, -1] <- Scenedesmus_metab2[1, -1] * runif(11, 0.9, 1.1)
   head(Scenedesmus_metab2)
   
-  (o <- metabolomicdata(Scenedesmus_metab))
+  (o <- continuousomicdata(Scenedesmus_metab))
   plot(o)
   (s <- itemselect(o, select.method = "quadratic"))
   (f <- drcfit(s))
   plot(f)
   
-  (o2 <- metabolomicdata(Scenedesmus_metab2))
+  (o2 <- continuousomicdata(Scenedesmus_metab2))
   plot(o2)
   (s2 <- itemselect(o2, select.method = "quadratic"))
   (f2 <- drcfit(s2))
